Fix extension action button window being too small

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,7 +22,6 @@ body {
 	align-items: center;
 	padding: 2rem;
 	width: 100%;
-	height: 100vh;
 	max-width: 600px;
 	box-sizing: border-box;
 }
